# music_speed_caster

./: .gitignore  README.md  check.py  launch.bat  launch.sh  main.py  music_downloader.py  player.py  pyproject.toml  pyvenv.cfg  requirements.txt
AAAA/Scripts/: activate  activate.bat  bottle.py
settings_window/: __init__.py  settings_window.py
utils/: __init__.py  platforms.py  utils.py
