[project]
name = "env"
version = "0.1.0"
description = "poetry init"
authors = [
    {name = "evgesha1999",email = "evgesha.22013@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tk (>=0.1.0,<0.2.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "ctk (>=0.1,<0.2)",
    "pipwin (>=0.5.2,<0.6.0)",
    "audioop-lts (>=0.2.1,<0.3.0)",
    "ctklistbox (>=1.5,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
